MODRTACHCE-39: Refactor holdings update handling to avoid race condition with item update